# tinkertaps

./: README.md  docker-compose.yaml
api/: Dockerfile  pyproject.toml  run.sh
api/alembic/: env.py
api/alembic/versions/: 6f2c18a71b11_create_jobs_and_users_tables.py
api/app/: main.py
api/app/api/routes/: health.py
api/app/core/: config.py  logging.py
api/app/db/: base.py  session.py
api/app/middleware/: logging.py  request_id.py
api/app/models/: __init__.py  jobs.py  users.py
api/tests/: conftest.py  test_error_responses.py  test_health.py  test_request_id.py
docker/postgres/init/: 01-create-api-user.sh  02-create-migrator.sh
docs/architecture/: components.md  flow.md
web/: .gitignore  THEME.md  astro.config.mjs  package-lock.json  package.json
web/src/: middleware.ts
web/src/components/: Footer.astro  Navbar.astro
web/src/components/app/: AppNavbar.astro
web/src/components/auth/: ClerkAuth.tsx
web/src/components/upload/: UploadFlow.tsx
web/src/layouts/: Layout.astro
web/src/pages/: index.astro  login.astro  new.astro  register.astro
web/src/pages/app/: index.astro
web/src/styles/: global.css
